# deepbridge-distillation

./: .coverage  CHANGELOG.md  README.md  RELEASE_NOTES_DISTILLATION_v2.0.0.md  pyproject.toml
.github/workflows/: tests.yml
deepbridge_distillation/: __init__.py  auto_distiller.py  base.py  experiment_runner.py  hpmkd_wrapper.py
deepbridge_distillation/techniques/: __init__.py  ensemble.py  knowledge_distillation.py  surrogate.py
deepbridge_distillation/techniques/hpm/: __init__.py  adaptive_config.py  cache_system.py  hpm_distiller.py  meta_scheduler.py  multi_teacher.py  parallel_pipeline.py  progressive_chain.py  shared_memory.py
deepbridge_distillation/techniques/optimization/: __init__.py  pruning.py  quantization.py  temperature_scaling.py
examples/: basic_distillation.py
tests/: __init__.py  conftest.py  test_auto_distiller.py  test_base.py  test_experiment_runner.py
tests/integration/: __init__.py  test_core_integration.py
tests/test_techniques/: test_ensemble.py  test_knowledge_distillation.py  test_optimization.py  test_surrogate.py
